
################################################################
# extra files to be added to distribution
################################################################

EXTRA_DIST =	\
			conda.txt \
			doxygen.cfg \
			latex-deps/adjcalc.sty \
			latex-deps/adjustbox.sty \
			latex-deps/collectbox.sty \
			latex-deps/tc-pgf.def \
			latex-deps/tocloft.sty \
			latex-deps/trimclip.sty \
			latex-deps/xtab.sty

