
# check that installed programs support the --help and --version options
# basic check that the program's run-time dependencies are satisfied
AUTOMAKE_OPTIONS = std-options

# the program to build
bin_PROGRAMS = IntaRNA

# generated intaRNA sources 
nodist_IntaRNA_SOURCES = 	config.h \
							intarna_config.h

# intaRNA sources
IntaRNA_SOURCES =	intaRNA.cpp \
					easylogging++.h \
					general.h \
					general.cpp \
					Accessibility.h \
					Accessibility.cpp \
					AccessibilityConstraint.h \
					AccessibilityConstraint.cpp \
					AccessibilityDisabled.h \
					AccessibilityFromStream.h \
					AccessibilityFromStream.cpp \
					AccessibilityVrna.h \
					AccessibilityVrna.cpp \
					CommandLineParsing.h \
					CommandLineParsing.cpp \
					IndexRange.h \
					IndexRange.cpp \
					IndexRangeList.h \
					IndexRangeList.cpp \
					Interaction.h \
					Interaction.cpp \
					InteractionEnergy.h \
					InteractionEnergy.cpp \
					InteractionEnergyBasePair.h \
					InteractionEnergyBasePair.cpp \
					InteractionEnergyIdxOffset.h \
					InteractionEnergyIdxOffset.cpp \
					InteractionEnergyVrna.h \
					InteractionEnergyVrna.cpp \
					InteractionRange.h \
					InteractionRange.cpp \
					OutputConstraint.h \
					OutputConstraint.cpp \
					OutputHandler.h \
					OutputHandler.cpp \
					OutputHandlerCsv.h \
					OutputHandlerCsv.cpp \
					OutputHandlerHub.h \
					OutputHandlerIntaRNA1.h \
					OutputHandlerIntaRNA1.cpp \
					OutputHandlerRangeOnly.h \
					OutputHandlerRangeOnly.cpp \
					OutputHandlerText.h \
					OutputHandlerText.cpp \
					PredictionTracker.h \
					PredictionTrackerProfileMinE.h \
					PredictionTrackerProfileMinE.cpp \
					Predictor.h \
					PredictorMaxProb.h \
					PredictorMaxProb.cpp \
					PredictorMfe.h \
					PredictorMfe.cpp \
					PredictorMfe2d.h \
					PredictorMfe2d.cpp \
					PredictorMfe2dSeed.h \
					PredictorMfe2dSeed.cpp \
					PredictorMfe2dHeuristic.h \
					PredictorMfe2dHeuristic.cpp \
					PredictorMfe2dHeuristicSeed.h \
					PredictorMfe2dHeuristicSeed.cpp \
					PredictorMfe4d.h \
					PredictorMfe4d.cpp \
					PredictorMfe4dSeed.h \
					PredictorMfe4dSeed.cpp \
					ReverseAccessibility.h \
					ReverseAccessibility.cpp \
					RnaSequence.h \
					RnaSequence.cpp \
					SeedConstraint.h \
					SeedConstraint.cpp \
					SeedHandler.h \
					SeedHandler.cpp \
					SeedHandlerIdxOffset.h \
					SeedHandlerIdxOffset.cpp \
					VrnaHandler.h \
					VrnaHandler.cpp

